<resources>
    <string name="app_name">Simpasi</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_food_daily">Food Daily</string>
    <string name="title_children">Children</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_food_menu">Image Food Menu</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">delete</string>
    <string name="menu_recommendation">Menu Recommendation</string>
    <string name="akg_daily">AKG Daily</string>
    <string name="date">Date</string>
    <string name="add_data">Add Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="invalid_email">Format email is invalid!</string>
    <string name="username">Username</string>
    <string name="add_to_daily_food">Add to Daily Food</string>
    <string name="search">Search</string>
    <string name="child_image">Child Image</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="birthday">Birthday</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="alergi">Alergi</string>
    <string name="error_validation">Enter your %1$s</string>
    <string name="success">Success</string>
    <string name="sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="register_image">Register Image</string>
    <string name="signup_text">Signup</string>
    <string name="name_hint">Text Your Name</string>
    <string name="email_hint">Text Your Email</string>
    <string name="emailusername_hint">Text Your Email / Username</string>
    <string name="username_hint">Text Your Username</string>
    <string name="password_hint">Text Your Password</string>
    <string name="old_password_hint">Text Your Old Password</string>
    <string name="new_password_hint">Text Your New Password</string>
    <string name="confirm_password_hint">Confirm Your Password</string>
    <string name="signup_keterangan">Have Already Account ?</string>
    <string name="login_keterangan">Dont have any account ?</string>
    <string name="lupa_password">Forgot your password ?</string>
    <string name="signup">Signup</string>
    <string name="min_length_char">Minimum length %1$d character</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="next">Next</string>
    <string name="tittle_alert">Great!</string>
    <string name="message_success_alert">Account successfully created!</string>
    <string name="roti_tawar">Roti Tawar</string>
    <string name="cumi_cumi">Cumi Cumi</string>
    <string name="tepung_beras">Tepung Beras</string>
    <string name="pisang">Pisang</string>
    <string name="telur_bebek">Telur Bebek</string>
    <string name="kacang_tanah">Kacang Tanah</string>
    <string name="kerang">Kerang</string>
    <string name="alpukat">Alpukat</string>
    <string name="logout">Logout</string>
    <string name="emailusername">Email / Username</string>
    <string name="today">Today</string>
</resources>