<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tezaalfian.simpasi.view.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.tezaalfian.simpasi.view.main.food.FoodFragment"
        android:label="@string/title_food_daily"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_children"
        android:name="com.tezaalfian.simpasi.view.main.children.ChildrenFragment"
        android:label="@string/title_children"
        tools:layout="@layout/fragment_children" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tezaalfian.simpasi.view.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>