<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.main.children.AddEditChildActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_birthday"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_birthday"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_weight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/weight"
            app:layout_constraintTop_toBottomOf="@id/tv_birthday">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/height"
            app:layout_constraintTop_toBottomOf="@id/tv_weight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/eg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:checkedButton="@+id/radio_button_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_height">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/blue_500"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/blue_500"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_alergi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/alergi"
            app:layout_constraintTop_toBottomOf="@id/eg_gender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_alergi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/save"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@+id/tv_alergi" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/title_delete"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@+id/btn_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>