<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".view.main.profile.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:shadowColor="@color/black"
            android:text="@string/edit_profile"
            android:textColor="@color/blue_500"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/tv_edit_profile"
            app:layout_constraintStart_toStartOf="@+id/tv_edit_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile" />

        <com.tezaalfian.simpasi.core.ui.customview.EditText
            android:id="@+id/edt_edit_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/name_hint"
            android:background="@color/Blue_50"
            app:layout_constraintEnd_toEndOf="@+id/tv_edit_name"
            app:layout_constraintStart_toStartOf="@+id/tv_edit_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_name"/>

        <TextView
            android:id="@+id/tv_edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/edt_edit_name"
            app:layout_constraintStart_toStartOf="@+id/edt_edit_name"
            app:layout_constraintTop_toBottomOf="@+id/edt_edit_name" />

        <com.tezaalfian.simpasi.core.ui.customview.EmailEditText
            android:id="@+id/edt_edit_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:background="@color/Blue_50"
            app:layout_constraintEnd_toEndOf="@+id/tv_edit_email"
            app:layout_constraintStart_toStartOf="@+id/tv_edit_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_email" />

        <TextView
            android:id="@+id/tv_edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/edt_edit_email"
            app:layout_constraintStart_toStartOf="@+id/edt_edit_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_edit_email" />

        <com.tezaalfian.simpasi.core.ui.customview.PasswordEditText
            android:id="@+id/edt_edit_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:background="@color/Blue_50"
            app:layout_constraintEnd_toEndOf="@+id/tv_edit_password"
            app:layout_constraintStart_toStartOf="@+id/tv_edit_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_password" />

        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_500"
            android:text="@string/save"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/edt_edit_password"
            app:layout_constraintStart_toStartOf="@+id/edt_edit_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_edit_password" />

        <RelativeLayout
            android:id="@+id/view_progressbar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>