<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login"
            android:textColor="@color/blue_500"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="@+id/tv_login"
            app:layout_constraintStart_toStartOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <com.tezaalfian.simpasi.core.ui.customview.EmailEditText
            android:id="@+id/edt_login_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/emailusername_hint"
            android:background="@color/Blue_50"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_email"
            app:layout_constraintStart_toStartOf="@+id/tv_login_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_email"/>

        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/edt_login_email"
            app:layout_constraintStart_toStartOf="@+id/edt_login_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_login_email" />

        <com.tezaalfian.simpasi.core.ui.customview.PasswordEditText
            android:id="@+id/edt_login_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:background="@color/Blue_50"
            app:layout_constraintEnd_toEndOf="@+id/tv_login_password"
            app:layout_constraintStart_toStartOf="@+id/tv_login_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_500"
            android:text="@string/login"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/edt_login_password"
            app:layout_constraintStart_toStartOf="@+id/edt_login_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

        <TextView
            android:id="@+id/tv_ket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/login_keterangan"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup"
            android:textColor="@color/blue_500"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toEndOf="@+id/tv_ket"
            app:layout_constraintTop_toTopOf="@+id/tv_ket" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColorHint="@color/blue_500"
            android:text="@string/lupa_password"
            app:layout_constraintStart_toStartOf="@+id/tv_ket"
            app:layout_constraintTop_toBottomOf="@+id/tv_ket" />

        <RelativeLayout
            android:id="@+id/view_progressbar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>