<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.food.detail.FoodDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_food_menu"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/image_food_menu"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_margin="16dp"
            android:textColor="@color/blue_700"
            app:layout_constraintTop_toBottomOf="@id/img_food_menu"
            app:layout_constraintEnd_toEndOf="@id/img_food_menu"
            app:layout_constraintStart_toStartOf="@+id/img_food_menu"
            tools:text="@string/food_name" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toEndOf="@+id/tv_food_name"
            app:layout_constraintStart_toStartOf="@+id/tv_food_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_name"
            tools:text="@string/description" />

        <Button
            android:id="@+id/btn_add_food"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_daily_food"
            android:layout_marginTop="16dp"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>